apps/external/opnsense/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.1
  ports:
    - name: https
      port: 10443
      targetPort: 10443
