apps/external/opnsense/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opnsense
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`opnsense.joejad.com`)
      kind: Rule
      services:
        - name: opnsense
          port: 10443
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
